--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "hola-mundo",
+  "name": "hola_mundo",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^0.31.2",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.3",
+    "request": "^2.88.2",
     "sqlite3": "^5.1.6"
   }
 }
