--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "jade": "^0.31.2",
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.3",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "request": "^2.88.2",
     "sqlite3": "^5.1.6"
   }
